# Maximilian

./: CMakeLists.txt  Doxyfile  License.txt  README.md  library.properties
doc/html/: annotated.html  classconvert-members.html  classconvert.html  classes.html  classmaxi_async_kuramoto_oscillator-members.html  classmaxi_async_kuramoto_oscillator.html  classmaxi_biquad-members.html  classmaxi_biquad.html  classmaxi_bits-members.html  classmaxi_bits.html  classmaxi_chorus-members.html  classmaxi_chorus.html  classmaxi_counter-members.html  classmaxi_counter.html  classmaxi_d_c_blocker-members.html  classmaxi_d_c_blocker.html  classmaxi_delayline-members.html  classmaxi_delayline.html  classmaxi_dyn-members.html  classmaxi_dyn.html  classmaxi_env-members.html  classmaxi_env.html  classmaxi_envelope-members.html  classmaxi_envelope.html  classmaxi_envelope_follower_type-members.html  classmaxi_envelope_follower_type.html  classmaxi_f_f_t_adaptor-members.html  classmaxi_f_f_t_adaptor.html  classmaxi_filter-members.html  classmaxi_filter.html  classmaxi_flanger-members.html  classmaxi_flanger.html  classmaxi_i_f_f_t_adaptor-members.html  classmaxi_i_f_f_t_adaptor.html  classmaxi_index-members.html  classmaxi_index.html  classmaxi_kuramoto_oscillator-members.html  classmaxi_kuramoto_oscillator.html  classmaxi_kuramoto_oscillator_set-members.html  classmaxi_kuramoto_oscillator_set.html  (+41 more)
doc/latex/: annotated.tex  classconvert.tex  classmaxi_async_kuramoto_oscillator.eps  classmaxi_biquad.tex  (+42 more)
src/: maximilian.cpp  maximilian.embind.cpp  maximilian.h  maximilian_types.h
(+35 files in other folders)
